--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
 <FrameLayout
-    android:id="@+id/frameForFragment"
+    android:id="@+id/frameForFragmentInWork"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="4dp"
@@ -31,6 +31,19 @@
     app:layout_constraintTop_toBottomOf="@+id/include"
     app:layout_constraintVertical_bias="0.0"
     />
+    <FrameLayout
+        android:id="@+id/frameForFragmentArchive"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/include"
+        app:layout_constraintVertical_bias="0.0"
+        />
 
     <ImageButton
         android:id="@+id/addButton"
