--- a/app/src/main/res/layout/fragment_archiv.xml
+++ b/app/src/main/res/layout/fragment_archiv.xml
@@ -7,9 +7,19 @@
     tools:context=".Archiv">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="vertical">
+
+        <ListView
+            android:id="@+id/lvArchiveLine"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+
+
+
+    </LinearLayout>
 
 </FrameLayout>
