--- a/app/src/main/res/layout/fragment_in_work.xml
+++ b/app/src/main/res/layout/fragment_in_work.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -16,11 +16,19 @@
         <ListView
             android:id="@+id/lvCards"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
+            android:layout_height="match_parent"
+            >
+
+
+        </ListView>
+
 
 
 
     </LinearLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:visibility="visible"/>
+</FrameLayout>
